--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ pandas
 numpy
 requests
 beautifulsoup4
-sqlite3
 
 # Database
 sqlalchemy
@@ -24,4 +23,4 @@ pyyaml
 
 # Utilities
 tqdm
-dateutil
+python-dateutil
